# Zoom

./: CMakeLists.txt  LICENCE.txt  README.txt
cmake/: config.cmake
cmake/modules/: FindZoost.cmake
examples/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp
include/Zoom/: Color.hpp  Config.hpp  Kinetic.hpp  Light.hpp  LightManager.hpp  ShaderPack.hpp  Shape.hpp  Spot.hpp  Sprite3d.hpp  Variation.hpp  Variation.inl
src/: CMakeLists.txt  Color.cpp  Kinetic.cpp  Light.cpp  LightManager.cpp  ShaderPack.cpp  Shape.cpp  Spot.cpp  Sprite3d.cpp
